Broadcast z-index fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -338,6 +338,7 @@ code {
 }
 
 #broadcast {
+    z-index: 100 !important;
     pointer-events: none;
     animation: mmfadeIn 500ms cubic-bezier(0.0, 0.0, 0.2, 1);
     transition: opacity;
